# greedy

./: .env.example  .example.env  .gitignore  Anchor.toml  Cargo.toml  Dockerfile  LICENSE  README.md  configuration.sample.toml  package-lock.json  package.json  tsconfig.json
app/indexer/: Cargo.toml
app/indexer/migrations/: persistence.sql  sales.sql  status.sql
app/indexer/src/: configuration.rs  lib.rs  main.rs  observability.rs
app/indexer/src/app/: interface.rs  logic.rs  mod.rs  server.rs  state.rs
app/indexer/src/database/: manager.rs  mod.rs  payload.rs
app/indexer/src/fetcher/: execution.rs  mod.rs
app/indexer/src/indexer/: cursor.rs  execution.rs  mod.rs
app/indexer/src/rpc/: decoder.rs  entity_processor.rs  events.rs  fetcher.rs  instruction.rs  job_processor.rs  mod.rs  pda_utils.rs
front/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  vite.config.ts
front/src/: App.tsx  global.d.ts  main.tsx
front/src/components/: index.tsx
front/src/config/: env.ts
front/src/constants/: core.ts  sale.ts
front/src/hooks/: useAirdropPolling.tsx  useAirdropStatus.tsx  useHideSidebar.tsx  useNow.tsx  useNowMs.tsx  useRedirectIfNotConnected.ts
front/src/interfaces/: airdrops.ts  modals.ts  tokens.ts
front/src/modals/: ModalsProvider.tsx  lazyImportModal.tsx
front/src/pages/: index.ts
front/src/services/: IPFSService.ts  PinataService.ts  (+1 more)
programs/greedy/: Cargo.toml
programs/greedy/src/: errors.rs  lib.rs
programs/greedy/src/context/: constants.rs  contract_state.rs  mod.rs  participant.rs  sale.rs  utils.rs
programs/greedy/src/state/: contract_state.rs  mod.rs  participant.rs  sale.rs
scripts/: appTest.ts  createPumpAmm.ts  createSale.ts  initializeContractState.ts  participate.ts  participateInSale.ts  updateMultiplier.ts
tests/: participant.spec.ts  sale.spec.ts  state.spec.ts  test_keypair.json
tests/util/: entity.ts  error.ts  setup.ts  token.ts
(+80 files in other folders)
