[package]
name = "greedy-indexer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "greedy-indexer"
path = "src/main.rs"

[lib]
crate-type = ["lib"]
name = "greedy_indexer"

[dependencies]
axum = "0.6.14"
tokio = { version = "1", features = ["full"] }

clap = { version = "4.5.38", features = ["derive"] }
anyhow = "1"
config = "0.15.11"
uuid = { version = "1", features = ["serde", "v4"] }
enum_extract = "0.1"

serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
serde_with = { version = "3", features = ["chrono_0_4"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "fmt",
    "json",
    "env-filter",
] }

bs58 = "0.5.1"
sha2 = "0.10.8"
async-trait = "0.1.88"

solana-sdk = "2.2.2"
solana-client = "2.2.7"
solana-transaction-status = "2.2.7"
anchor-client = { version = "0.31.1", features = ["async"] }
anchor-spl = "0.31.1"

greedy-solana = "0.1.2"

sqlx = { version = "0.7.4", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
] }

blake3 = { version = "1.8", features = ["pure"] }

